--- a/masharka/index.html
+++ b/masharka/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://bydauto.co.il/service-centers/afula/">
+    <meta http-equiv="refresh" content="0; url=https://www.masharka.co.il/vw/">
     <title>Masharka Redirect</title>
   </head>
   <body>
