--- a/masharka/index.html
+++ b/masharka/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.masharka.co.il/vw/">
-    <title>Masharka Redirect</title>
+    <title>Redirecting...</title>
+    <script>
+      window.location.replace("https://bydauto.co.il/service-centers/afula/");
+    </script>
   </head>
   <body>
     <p>Redirecting to Masharka...</p>
