--- a/masharka/index.html
+++ b/masharka/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Redirecting...</title>
     <script>
-      window.location.replace("https://bydauto.co.il/service-centers/afula/");
+      window.onload = function () {
+        window.location.href = "https://bydauto.co.il/service-centers/afula/";
+      };
     </script>
   </head>
   <body>
