--- a/masharka/index.html
+++ b/masharka/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
-    <script>
-      window.onload = function () {
-        window.location.href = "https://bydauto.co.il/service-centers/afula/";
-      };
-    </script>
-  </head>
-  <body>
-    <p>Redirecting to Masharka...</p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <title>Redirecting...</title>
+  <script>
+    // הגדרת הפניה ברגע שהעמוד עולה
+    window.onload = function () {
+      // כתובת ההפניה:
+      window.location.replace("https://www.masharka.co.il/vw/");
+    };
+  </script>
+</head>
+<body>
+  <p>Redirecting...</p>
+</body>
 </html>
