--- a/key/index.html
+++ b/key/index.html
@@ -9,7 +9,7 @@
 
     const redirects = {
       gabi: "https://wa.me/972501234567",
-      masharka: "https://www.youtube.com/",
+      masharka: "https://bydauto.co.il/service-centers/afula/",
       promo1: "https://example.com/promo"
     };
 
